v2 information architecture & introductions to populations

--- a/questions/introduction.mdx
+++ b/questions/introduction.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Introduction'
-description: "Core concepts of Questions."
+description: "Questions are predictions of how a Population would answer a question."
 ---
